@startuml view-reviews
hide circle
skinparam classAttributeIconSize 0
title View Reviews
class User {
  +userId: UUID
  +email: string
  +username: string
  +passwordHash: string
  +role: Role
  +isBanned: bool
  +displayName: string
  +avatarUrl: string
}

class Game {
  +gameId: UUID
  +title: string
  +price: decimal
  +discountPercent: int
  +status: GameStatus
  +rejectionReason: string
}

class Review {
  +reviewId: UUID
  +stars: int
  +text: string
  +createdAt: datetime
}

User "1" --> "0..*" Review : writes
Review "1" --> "1" Game : about
@enduml
